--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
+
   <body>
     <div class="nav">
       <input type="checkbox" id="nav-check" />
@@ -36,9 +37,11 @@
         <button class="cont_but">Contact US</button>
       </div>
     </div>
-    <!-- ******************************************** -->
+    <!-- **************** -->
     <div class="blog">
-      <div class="image"><h3>Blogs</h3></div>
+      <div class="image">
+        <h3>Blogs</h3>
+      </div>
       <div class="card-content">
         <div class="coffee">
           <h4>BREWING UP</h4>
@@ -56,26 +59,19 @@
         <h2 id="three">
           Three Surprising Similarities Between Coffee & Real Estate
         </h2>
-        <h4 class="mb">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla,
-          laudantium. Lorem ipsum dolor sit amet.
-        </h4>
-        <h4 class="mb">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam,
-          dolor. Voluptatem nam dolorum culpaadcwscwe sed!
-        </h4>
-        <h4 class="mb">
+
+        <p class="mb">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium
           molestias vel cumque ad impedit culpa iusto maxime nostrum, nobis
           debitis quam explicabo? Inventore, praesentium fugiat.
-        </h4>
-        <h4 class="mb">
+        </p>
+        <p class="mb">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi
           ullam id aspernatur voluptate ex nemo nihil quia doloremque, a omnis
           doloribus distinctio voluptas incidunt delectus itaque. Maxime?
-        </h4>
+        </p>
 
-        <h2 class="heading" id="head">The local Area</h2>
+        <h3 class="heading" id="head">Both are best served HOT!</h3>
         <p class="mb">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. A, laudantium
           nulla! Autem, magnam, ullam reiciendis, quia optio iste repudiandae
@@ -84,7 +80,7 @@
           adipisicing elit. Eligendi iusto nisi inventore temporibus eius odit
           nobis et. Error, aliquid maiores.
         </p>
-        <h2 class="heading" id="head">A new Addition to the team</h2>
+        <h3 class="heading" id="head">Both go by ‘ Location Matters!’</h3>
         <p class="mb">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. A, laudantium
           nulla! Autem, magnam, ullam reiciendis, quia optio iste repudiandae
@@ -93,7 +89,7 @@
           adipisicing elit. Eligendi iusto nisi inventore temporibus eius odit
           nobis et. Error, aliquid maiores.
         </p>
-        <h2 class="heading" id="head">Launching our new range of merch</h2>
+        <h3 class="heading" id="head">Both Offer Variety</h3>
         <p class="mb">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. A, laudantium
           nulla! Autem, magnam, ullam reiciendis, quia optio iste repudiandae
@@ -114,7 +110,7 @@
         </p>
       </div>
     </div>
-    <!-- **************************************** -->
+    <!-- ************** -->
     <footer class="footer">
       <div class="container">
         <div class="row">
