--- a/index.html
+++ b/index.html
@@ -42,20 +42,10 @@
       <div class="image">
         <h3>Blogs</h3>
       </div>
-      <div class="card-content">
-        <div class="coffee">
-          <h4>BREWING UP</h4>
-        </div>
-        <div class="mainicon">
-          <div id="user">
-            <i class="fa-regular fa-user" id="fa-user"></i>
-            <h3>by Admin</h3>
-          </div>
-          <div id="calender">
-            <i class="fa-sharp fa-regular fa-calendar" id="fa-calender"></i>
-            <h3>March 2,2023</h3>
-          </div>
-        </div>
+    </div>
+    <!-- ******************** -->
+    <div class="cardmain">
+      <div class="left_text">
         <h2 id="three">
           Three Surprising Similarities Between Coffee & Real Estate
         </h2>
@@ -89,26 +79,55 @@
           adipisicing elit. Eligendi iusto nisi inventore temporibus eius odit
           nobis et. Error, aliquid maiores.
         </p>
-        <h3 class="heading" id="head">Both Offer Variety</h3>
-        <p class="mb">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. A, laudantium
-          nulla! Autem, magnam, ullam reiciendis, quia optio iste repudiandae
-          delectus dolorem distinctio laboriosam voluptatum illo ipsum molestias
-          doloremque unde quis? Lorem ipsum, dolor sit amet consectetur
-          adipisicing elit. Eligendi iusto nisi inventore temporibus eius odit
-          nobis et. Error, aliquid maiores.
-        </p>
-        <p class="mb">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero at
-          laudantium cum quaerat natus eligendi explicabo officia, porro amet
-          voluptas earum mollitia et? Ab, voluptatem.
-        </p>
-        <p class="mb">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus
-          optio libero pariatur tenetur quasi provident? Consequatur a beatae
-          laboriosam, officiis ipsam omnis soluta debitis mollitia.
-        </p>
       </div>
+      <div class="icon">
+        <div class="right_coffee">
+          <h4>BREWING UP</h4>
+        </div>
+        <div class="mainicon">
+          <div id="user">
+            <i class="fa-regular fa-user" id="fa-user"></i>
+            <h3>by Admin</h3>
+          </div>
+          <div id="calender">
+            <i class="fa-sharp fa-regular fa-calendar" id="fa-calender"></i>
+            <h3>March 2,2023</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="variety">
+      <h3 id="both">Both Offer Variety</h3>
+      <p class="bo">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. A, laudantium
+        nulla! Autem, magnam, ullam reiciendis, quia optio iste repudiandae
+        delectus dolorem distinctio laboriosam voluptatum illo ipsum molestias
+        doloremque unde quis? Lorem ipsum, dolor sit amet consectetur
+        adipisicing elit. Eligendi iusto nisi inventore temporibus eius odit
+        nobis et. Error, aliquid maiores.So, whether you're a coffee lover, a
+        real estate enthusiast, or both, it's clear that these two worlds have
+        more in common than meets the eye. And when it comes to investing in
+        real estate, having the right guidance and expertise can make all the
+        difference. That's where Realty Assistant comes in. Just like a skilled
+        barista who can help you find your perfect cup of coffee, our team of
+        real estate experts can assist you in finding the ideal property that
+        suits your taste and needs. With our years of experience, attention to
+        detail, and commitment to quality, we're dedicated to making the real
+        estate process as satisfying and enjoyable as your favourite brew.
+        Contact us today to see how we can help you find your perfect blend of
+        real estate.
+      </p>
+      <p class="bo">
+        Furthermore, like coffee shops that offer a range of drinks and treats
+        to cater to different preferences, real estate developers and agents
+        also offer various amenities and features to attract different buyers
+        and renters. From luxury finishes and state-of-the-art appliances to
+        communal spaces and convenient parking, there are countless options to
+        suit any taste or lifestyle. Whether you're a coffee connoisseur or a
+        real estate enthusiast, the variety offered by both ensures there's
+        always something new and exciting to explore
+      </p>
     </div>
     <!-- ************** -->
     <footer class="footer">
