--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <button class="cont_but">Contact US</button>
       </div>
     </div>
-    <!-- **************** -->
+    <!-- ****** -->
     <div class="blog">
       <div class="image">
         <h3>Blogs</h3>
       </div>
     </div>
-    <!-- ******************** -->
+    <!-- ******** -->
     <div class="cardmain">
       <div class="left_text">
         <h2 id="three">
@@ -70,15 +70,15 @@
           adipisicing elit. Eligendi iusto nisi inventore temporibus eius odit
           nobis et. Error, aliquid maiores.
         </p>
-        <h3 class="heading" id="head">Both go by ‘ Location Matters!’</h3>
-        <p class="mb">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. A, laudantium
-          nulla! Autem, magnam, ullam reiciendis, quia optio iste repudiandae
-          delectus dolorem distinctio laboriosam voluptatum illo ipsum molestias
-          doloremque unde quis? Lorem ipsum, dolor sit amet consectetur
-          adipisicing elit. Eligendi iusto nisi inventore temporibus eius odit
-          nobis et. Error, aliquid maiores.
-        </p>
+        <!-- <h3 class="heading" id="head">Both go by ‘ Location Matters!’</h3>
+      <p class="mb">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. A, laudantium
+        nulla! Autem, magnam, ullam reiciendis, quia optio iste repudiandae
+        delectus dolorem distinctio laboriosam voluptatum illo ipsum molestias
+        doloremque unde quis? Lorem ipsum, dolor sit amet consectetur
+        adipisicing elit. Eligendi iusto nisi inventore temporibus eius odit
+        nobis et. Error, aliquid maiores.
+      </p> -->
       </div>
       <div class="icon">
         <div class="right_coffee">
@@ -98,6 +98,15 @@
     </div>
 
     <div class="variety">
+      <h3 id="both">Both go by ‘ Location Matters!’</h3>
+      <p class="bo">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. A, laudantium
+        nulla! Autem, magnam, ullam reiciendis, quia optio iste repudiandae
+        delectus dolorem distinctio laboriosam voluptatum illo ipsum molestias
+        doloremque unde quis? Lorem ipsum, dolor sit amet consectetur
+        adipisicing elit. Eligendi iusto nisi inventore temporibus eius odit
+        nobis et. Error, aliquid maiores.
+      </p>
       <h3 id="both">Both Offer Variety</h3>
       <p class="bo">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. A, laudantium
@@ -129,7 +138,7 @@
         always something new and exciting to explore
       </p>
     </div>
-    <!-- ************** -->
+    <!-- ****** -->
     <footer class="footer">
       <div class="container">
         <div class="row">
